# lightflow

./: .gitignore  .travis.yml  LICENSE  README.rst  index.html  lightflow-complete.sh  lightflow.cfg  meta.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
css/: lightflow.css  syntax.css
dags/: branching_cross_dep_dag.py  branching_dag.py  loop_dag.py  modifier_dag.py  parallel_dag.py  simple_dag.py
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  install.rst  installation.rst  integration.rst  make.bat  monitor.rst  overview.rst  quickstart.rst  tasks.rst  worker.rst  workflow.rst
docs/tutorial/: decision.rst  index.rst  parallel.rst  setup.rst  simple.rst
examples/: abort.py  arguments.py  bash.py  branching.py  branching_dag.py  chunking_dag.py  data_store.py  decision.py  multi_data.py  parallel.py  parameters.py  queues.py  sequence.py  simple.py  simple_dag.py  slots.py  stop.py  sub_dag.py  timing.py
favicon/: manifest.json
js/: lightflow.js
lightflow/: __init__.py  celery_pickle.py  celery_tasks.py  config.py  lightflow.py  logger.py  workers.py  workflows.py
lightflow/celery/: app.py  control.py  jobs.py  tasks.py  worker.py
lightflow/graphs/: __init__.py  graph.py
lightflow/models/: __init__.py  action.py  arguments.py  base_task.py  const.py  dag.py  dag_signal.py  datastore.py  exceptions.py  mongo_proxy.py  task.py  (+8 more)
tests/: conftest.py  test_base_task.py  test_bash_task.py  test_exceptions.py  test_task_data.py  test_workflow.py  test_workflows.py
workflows/: branching_dag.py  data_store.py
(+23 files in other folders)
