[tool.poetry]
name = "lightflow"
version = "0.1.0"
description = "A lightweight workflow system"
authors = ["Andreas Moll <andreas.moll@synchrotron.org.au>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
